# repomemory

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  github.rs  main.rs  models.rs  pipeline.rs  startup.rs  state.rs
backend/src/pipeline/: context.rs  diff.rs  failguard.rs  helpers.rs  memory_run.rs  routes.rs  utils.rs
frontend/: index.html  package.json
frontend/src/: App.jsx  config.js
frontend/src/panels/: ChecksPanel.jsx  FailGuardPanel.jsx  HistoryPanel.jsx  IngestPanel.jsx  MemoryPanel.jsx  OverviewPanel.jsx
